--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       .handwritten-font {
         font-family: 'Zcool KuaiLe', cursive;
       }
-      /* Graph paper background pattern */
       .bg-graph-paper {
         background-color: #f8f9fa;
         background-image: 
@@ -21,20 +20,17 @@
           linear-gradient(90deg, #e5e7eb 1px, transparent 1px);
         background-size: 20px 20px;
       }
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 8px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 4px;
+      }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
-  }
-}
-</script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
